--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,10 @@ authors = ["ktenzer <keith.tenzer@temporal.io>"]
 python = "^3.11"
 flask = {extras = ["async"], version = "^2.2.3"}
 
+[tool.poetry.group.encryption]
+optional = true
+dependencies = { cryptography = "^38.0.1", aiohttp = "^3.8.1" }
+
 [tool.poetry.group.dev.dependencies]
 temporalio = "^1.2.0"
 
