--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.11"
 flask = {extras = ["async"], version = "^2.2.3"}
 qrcode = "^7.4.2"
 flask-session = "^0.5.0"
+dnspython = "^2.4.2"
 
 [tool.poetry.group.encryption]
 optional = true
