some fixes and added kapa.ai for temporal related questions
Signed-off-by: Keith Tenzer <ktenzer@keiths-mbp.lan>

--- a/yaml/certificates/certificate.yaml
+++ b/yaml/certificates/certificate.yaml
@@ -7,7 +7,7 @@ spec:
   privateKey:
     rotationPolicy: Always
   dnsNames:
-  - triviav2.tmprl-demo.cloud
+  - trivia.tmprl-demo.cloud
   issuerRef:
     name: letsencrypt
     kind: ClusterIssuer
