--- a/yaml/ingress/ingressroute_http.yaml
+++ b/yaml/ingress/ingressroute_http.yaml
@@ -9,7 +9,7 @@ spec:
   - web
   routes:
   - kind: Rule
-    match: Host(`triviav2.tmprl-demo.cloud`)
+    match: Host(`trivia.tmprl-demo.cloud`)
     services:
     - name: ui
       passHostHeader: true
